--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>scan for ble devices</title>
   <link rel="stylesheet" href="style.css" />
   <script src="ble-client.js"></script>
+  <script src="ble_scanner.js"></script>
   <body>
     <h1>scan for ble devices</h1>
 
@@ -117,7 +118,7 @@
 
     <div id="stats">
       <div id="not-connected">
-        <p>Connect to a balenaBLE device to get started</p>
+        <p>Connect to a BLE device to get started</p>
         <button id="btn-connect" class="btn">Connect</button>
       </div>
       <div id="container" class="hidden">
