--- a/index.html
+++ b/index.html
@@ -200,9 +200,9 @@
         // document.getElementById(
         //   "vendor"
         // ).textContent = await balenaBLE.readCPUVendor();
-        document.getElementById(
-          "vendor"
-        ).textContent = BLEScanr.device;
+        // document.getElementById(
+        //   "vendor"
+        // ).textContent = BLEScanr.device;
 
         // let result = BLEScanr.writeELM("atz\n");
         document.getElementById("speed").textContent = await BLEScanr.writeELM("atz\n");
