--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         console.log(BLEScanr);
         await BLEScanr.connect();
         console.log(BLEScanr);
-        // await BLEScanr.setReadCharacteristic();
+        await BLEScanr.setReadCharacteristic();
         // console.log(BLEScanr);
         await BLEScanr.setWriteCharacteristic();
         console.log(BLEScanr);
