add more commands

--- a/index.html
+++ b/index.html
@@ -199,6 +199,8 @@
         await BLEScanr.setWriteCharacteristic();
         console.log(BLEScanr);
         await BLEScanr.writeELM("atz\r");
+        await BLEScanr.writeELM("ATI\r");
+
         // await balenaBLE.setDeviceCharacteristic();
         document.getElementById("not-connected").classList.add("hidden");
         // document.getElementById(
