--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         // console.log(BLEScanr);
         await BLEScanr.setWriteCharacteristic();
         console.log(BLEScanr);
-        await BLEScanr.writeELM("atz\r");
+        // await BLEScanr.writeELM("atz\r");
         await BLEScanr.writeELM("ATI\r");
 
         // await balenaBLE.setDeviceCharacteristic();
